<resources>
    <string name="app_name">MaterialChifforobe</string>
    <string name="navigation_1">Option 1</string>
    <string name="navigation_2">Second Item</string>
    <string name="navigation_3">Another Menu</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="navigation_4">Last Resourse</string>
    <string name="menu_item_1">ALL</string>
    <string name="menu_item_2">HAVE</string>
    <string name="menu_item_3">NEED</string>
    <string name="menu_search">SEARCH</string>
    <string name="actionBarTitle">Finland</string>
    <string name="menu_item_4">SWAP</string>
    <string name="menu_item_5">UNC-</string>

    <string-array name="provinces">
        <item>Hot Springs</item>
        <item>Gettysburg</item>
        <item>Glacier</item>
        <item>Vicksburg</item>
        <item>Saratoga</item>
        <item>Cumberland Gap</item>
        <item>Fort Moultrie</item>
        <item>Bombay Hook</item>
    </string-array>

    <string-array name="parks">
        <item>Hot Springs</item>
        <item>Gettysburg</item>
        <item>Glacier</item>
        <item>Vicksburg</item>
        <item>Saratoga</item>
    </string-array>

    <string name="json">test.json</string>

</resources>
