<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_1"
        android:title="@string/menu_item_1"/>

    <item android:id="@+id/menu_2"
        android:title="@string/menu_item_2"/>

    <item android:id="@+id/menu_3"
        android:title="@string/menu_item_3"/>

    <item android:id="@+id/menu_4"
        android:title="@string/menu_item_4"/>

    <item android:id="@+id/menu_5"
        android:title="@string/menu_item_5"/>

    <!--<item android:id="@+id/menu_search"-->
        <!--android:title="@string/menu_search"-->
        <!--android:icon="@drawable/ic_search"-->
        <!--app:showAsAction="ifRoom|collapseActionView"-->
        <!--app:actionViewClass="android.support.v7.widget.SearchView"/>-->


</menu>